--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@ body {
   margin: 0;
 }
 
-.comment {
-  padding: 5px;
-  border: 1px solid grey;
-  border-radius: 4px;
+.avatar {
+  width: 100px;
+  height: 100px;
+  border: 2px solid blue;
+  border-radius: 100%;
 }
