--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,8 @@
   <%- include("partials/head.ejs") %>
   <body>
     <div class="container">
-      <%- include("partials/navbar.ejs") %>
-
       <h1>Login</h1>
+      <h5>Please login for using social network</h5>
       <% if (error !== "") { %>
       <div class="alert alert-danger" role="alert"><%- error %></div>
       <% } %>
@@ -33,8 +32,10 @@
         </div>
         <button type="submit" class="btn btn-primary mt-2">Login</button>
       </form>
+      <p class="mt-2">
+        Don't have an account? <a href="/register">Register</a>
+      </p>
     </div>
-
     <!-- JavaScript -->
     <script src="/jquery/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
