--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,36 +1,40 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="/" id=>VUkraine</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "home" ? "active" : "" %>" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "posts" ? "active" : "" %>" href="/posts">Posts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "contact" ? "active" : "" %>" href="/contact">Contact</a>
-        </li>
-      <% if (typeof currentUser !== "undefined" ) { %>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "profile" ? "active" : "" %>" href="/profile">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "logout" ? "active" : "" %>" href="/logout">Logout</a>
-        </li>
-      <% } else { %>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "login" ? "active" : "" %>" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link <%- activePage == "register" ? "active" : "" %>" href="/register">Register</a>
-        </li>
-      <% } %>
-      </ul>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">#STOP_WAR</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "home" ? "active" : "" %>" href="/">Home</a>
+          </li>
+        <% if (typeof currentUser !== "undefined" ) { %>
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "profile" ? "active" : "" %>" href="/profile">Edit Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "logout" ? "active" : "" %>" href="/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "login" ? "active" : "" %>" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "register" ? "active" : "" %>" href="/register">Register</a>
+          </li>
+        <% } %>
+        </ul>
+        <form class="d-flex mt-3 mt-lg-0" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
   </div>
 </nav>
