--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,21 +3,40 @@
   <%- include("partials/head.ejs") %>
   <body>
     <div class="container">
-      <%- include("partials/navbar.ejs") %>
-
       <h1>Register</h1>
       <% if (error !== "") { %>
       <div class="alert alert-danger" role="alert"><%- error %></div>
       <% } %>
-      <form method="post" action="/register">
+      <form method="post" action="/register" enctype="multipart/form-data">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">First name</label>
           <input
             type="text"
             name="name"
             class="form-control"
             id="name"
             placeholder="John"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="name">Second name</label>
+          <input
+            type="text"
+            name="surname"
+            class="form-control"
+            id="surname"
+            placeholder="Shmedtman"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="image">Select avatar image</label>
+          <input
+            type="file"
+            name="image"
+            class="form-control"
+            id="image"
             required
           />
         </div>
@@ -44,6 +63,7 @@
         </div>
         <button type="submit" class="btn btn-primary mt-2">Register</button>
       </form>
+      <p class="mt-2">Have an account? <a href="/login">Log in</a></p>
     </div>
 
     <!-- JavaScript -->
