--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,30 @@ body {
   height: 100px;
   border: 2px solid blue;
   border-radius: 100%;
+  float: left;
+  margin-right: 25px;
+}
+.profile-block {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.post {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid lightgrey;
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 600px;
+}
+.control {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.post p {
+  padding: 0;
+  margin: 0;
 }
