--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,5 +9,5 @@ shrink-to-fit=no"
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/style.css" />
-  <title>My blog</title>
+  <title>VUkraine - ukrainian social network</title>
 </head>
