--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,11 +12,14 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link <%- activePage == "home" ? "active" : "" %>" href="/">Home</a>
+            <a class="nav-link <%- activePage == "home" ? "active" : "" %>" href="/">Profile</a>
           </li>
         <% if (typeof currentUser !== "undefined" ) { %>
           <li class="nav-item">
             <a class="nav-link <%- activePage == "profile" ? "active" : "" %>" href="/profile">Edit Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%- activePage == "people" ? "active" : "" %>" href="/people">People</a>
           </li>
           <li class="nav-item">
             <a class="nav-link <%- activePage == "logout" ? "active" : "" %>" href="/logout">Logout</a>
