--- a/views/profile_answer.ejs
+++ b/views/profile_answer.ejs
@@ -7,7 +7,7 @@
 
       <div class="alert alert-success" role="alert">Info changed!</div>
 
-      <p>Back to <a href="/">main page</a></p>
+      <p>Back to <a href="/">profile</a></p>
     </div>
 
     <!-- JavaScript -->
