--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,9 @@ body {
   padding: 0;
   margin: 0;
 }
+.profile-block a {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 600px;
+}
