--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,18 @@
         <div class="post mt-3">
           <div class="control">
             <h5><%- post["title"] %></h5>
+            <div>
+              <a
+                href="/posts/<%- post['id'] %>/edit"
+                class="btn btn-success mt-1"
+                >Edit</a
+              >
+              <a
+                href="/posts/<%- post['id'] %>/delete"
+                class="btn btn-danger mt-1"
+                >Delete</a
+              >
+            </div>
           </div>
           <p><%- post["body"] %></p>
         </div>
