--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -33,8 +33,8 @@
           </li>
         <% } %>
         </ul>
-        <form class="d-flex mt-3 mt-lg-0" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex mt-3 mt-lg-0" role="search" method="post" action="/search">
+          <input class="form-control me-2" type="search" name="searchLine" id="surnameLine" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
