--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,17 +5,27 @@
     <div class="container">
       <%- include("partials/navbar.ejs") %>
 
-      <h1>Profile</h1>
+      <h1>Edit Profile</h1>
       <form method="post" action="/profile">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">First name</label>
           <input
             type="text"
             name="name"
             class="form-control"
             id="name"
             value="<%- currentUser.name %>"
-            placeholder="John"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="name">Second name</label>
+          <input
+            type="text"
+            name="surname"
+            class="form-control"
+            id="surname"
+            value="<%- currentUser.surname %>"
             required
           />
         </div>
