--- a/views/searchResult.ejs
+++ b/views/searchResult.ejs
@@ -4,8 +4,10 @@
   <body>
     <div class="container">
       <%- include("partials/navbar.ejs") %>
+
       <div>
-        <h1>People:</h1>
+        <h1>Search result:</h1>
+        <p>See <a href="/people">all people</a></hp>
         <% if (users !== undefined) users.forEach(function(user) { %>
         <div class="profile-block mt-3">
           <a href="/user/<%- user.id %>">
@@ -16,7 +18,6 @@
         <% }) %>
       </div>
     </div>
-
     <!-- JavaScript -->
     <script src="/jquery/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
